[Major] Added user history to privilege
- firstLogin
- lastLogin
- lastPasswordChange